Fix scrollbar issues in PiP window (#18)

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 /**
  * CSS styles for PiP window fixes and customizations
  */
+
+body {
+  overflow: hidden !important;
+}
+
 ytd-miniplayer {
   left: 0 !important;
   right: 0 !important;
